--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,25 @@
 
 # Embedded web-server pid file
 /.web-server-pid
+
+### Symfony Patch ###
+/web/css/
+/web/js/
+
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+# Local History for Visual Studio Code
+.history/
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+.history
+.ionide
+
+# End of https://www.toptal.com/developers/gitignore/api/visualstudiocode
