--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,15 @@
-#index:
-#    path: /
-#    controller: App\Controller\DefaultController::index
+index:
+  path: /
+  controller: App\Controller\SecurityController::login
+
+logout:
+  path: logout
+  controller: App\Controller\SecurityController::logout
+
+register:
+  path: Inscription
+  controller: App\Controller\RegistrationController::register
+
+home:
+  path: Dashboard
+  controller: App\Controller\HomeController::index
